// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments screen renders a message if the page does not exist 1`] = `
<div
  className="comments-container"
>
  <h3
    className="ui block header comments-header"
  >
    <a
      href="/category/category-slug/42/post/post-slug/54"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="close icon"
      />
    </a>
  </h3>
  <div>
    <div
      className="ptr-element"
    >
      <span
        className="genericon genericon-next"
      />
      <div
        className="loading"
      >
        <span
          className="loading-ptr-1"
        />
        <span
          className="loading-ptr-2"
        />
        <span
          className="loading-ptr-3"
        />
      </div>
    </div>
    <div
      className="refresh-view"
    >
      <Comments view test
        commentStatus="closed"
        comments={Array []}
        loading={0}
        postId="54"
        texts={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`Comments screen renders comments list 1`] = `
<div
  className="comments-container"
>
  <h3
    className="ui block header comments-header"
  >
    Comments
    <a
      href="/category/category-slug/42/post/post-slug/54"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="close icon"
      />
    </a>
  </h3>
  <div>
    <div
      className="ptr-element"
    >
      <span
        className="genericon genericon-next"
      />
      <div
        className="loading"
      >
        <span
          className="loading-ptr-1"
        />
        <span
          className="loading-ptr-2"
        />
        <span
          className="loading-ptr-3"
        />
      </div>
    </div>
    <div
      className="refresh-view"
    >
      <Comments view test
        commentStatus="open"
        comments={
          Array [
            Object {
              "author_avatar_urls": Object {
                "24": "some-rurl",
              },
              "author_name": "Comment Author",
              "content": Object {
                "rendered": "Comment content",
              },
              "date": "d date",
              "id": 67,
              "post": 54,
            },
          ]
        }
        loading={0}
        postId="54"
        texts={
          Object {
            "TEXTS": Object {
              "COMMENTS": "Comments",
            },
          }
        }
      />
    </div>
  </div>
</div>
`;
